# Miyu

./: .gitignore  Cargo.toml  README.md  README_WINDOWS.md  README_中文.md  build-windows.ps1  build.rs  设计方案.md
.github/workflows/: ci.yml
docs/: task-tool-design.md
knowledge-base/2. Arch Linux安装与配置相关/: 怎么安装中文输入法.md
knowledge-base/3. 日用Arch Linux的常见问题/: Asus华硕笔记本在Linux上的Armoury Crate替代品推荐.md  Nautilus或Thunar无法显示exe文件的缩略图和logo.md  如果btrfs快照回档之后系统挂了，屏幕上日志显示boot目录挂载失败.md
knowledge-base/4. Linux玩游戏相关/: Linux能用什么游戏加速器.md  linux怎么玩炉石传说.md
knowledge-base/新闻资讯/: Niri26.04更新内容.md
src/: alarm.rs  cli.rs  clipboard.rs  config.rs  config_tui.rs  default_kb.rs  i18n.rs  main.rs  models_cache.rs  paths.rs  prompts.rs  question.rs  token_estimate.rs
src/agent/: compact.rs  mod.rs
src/llm/: mod.rs  openai_compatible.rs
src/market/: mod.rs
src/memes/miyu/: index.json
src/memory/: mod.rs
src/prompts/: linux-game-compatibility.md  linux-input-method-diagnose.md  miyu.md  subagent-explore.md  subagent-general.md
src/render/: mod.rs  wait_spinner.rs
src/scripts/: top_procs.sh
src/shell/: fish.rs  mod.rs  powershell.rs
src/state/: conversation_db.rs  mod.rs  usage.rs
src/tools/: alarm.rs  apply_patch.rs  archlinux.rs  ask_question.rs  deep_diagnose.rs  deep_research.rs  deepseek_status.rs  default_tools.rs  diagnostics.rs  edit_replace.rs  fcitx_wiki.rs  hash_codec.rs  image_generation.rs  knowledge_base.rs  linux_game.rs  load_tools.rs  market_tools.rs  memes.rs  memory.rs  mod.rs  moegirl.rs  package_advisor.rs  patch_preview.rs  registry.rs  scripts.rs  skills.rs  subagent_runner.rs  task.rs  todowrite.rs  tool_descriptions.rs  vision.rs  web.rs  web_images.rs  write.rs  xuanxue.rs
src/tools/descriptions/: add_meme.json  apply_patch.json  archlinux_news.json  archlinux_official_package_query.json  archwiki_query.json  ask_question.json  aur_check_status.json  aur_get_package_info.json  aur_search_packages.json  glob.json  (+66 more)
