[package]
name = "miyu"
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/SHORiN-KiWATA/Miyu"
description = "Command-line AI assistant"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
blake3 = "1.5"
blake2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.4"
crossterm = "0.28"
directories = "5.0"
hex = "0.4"
html2md = "0.2"
html2text = "0.12"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "webp"] }
json_comments = "0.2"
futures-util = "0.3"
flate2 = "1.0"
fuzzy-matcher = "0.3"
fancy-regex = "0.17"
libc = "0.2"
md5 = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
rand = "0.8"
rodio = { version = "0.19", default-features = false, features = ["mp3", "wav"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rustyline = "14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "regex-onig"] }
termimad = "0.34"
tempfile = "3.15"
tar = "0.4"
tokio = { version = "1.38", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal"] }
trash = "5.2"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "registry"] }
unicode-segmentation = "1.12"
unicode-width = "0.2"
urlencoding = "2.1"
rustc-hash = "2"

[target.'cfg(windows)'.dependencies]
clipboard-win = "5.4"
windows-sys = { version = "0.52", features = ["Win32_Globalization"] }

[build-dependencies]
base64 = "0.22"

[dev-dependencies]
tiktoken-rs = "0.12"
